Added The upadate Password and LogOut Logs