@@ -1,66 +1,53 @@
 package com.hyundai.dms.controller;
 
-import com.hyundai.dms.entity.Employee;
+import com.hyundai.dms.dto.EmployeePerformanceDTO;
 import com.hyundai.dms.repository.BookingRepository;
-import com.hyundai.dms.repository.CustomerRepository;
-import com.hyundai.dms.repository.EmployeeRepository;
-import com.hyundai.dms.repository.TestDriveRepository;
 import com.hyundai.dms.security.util.CurrentUserUtil;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/dealer/performance")
 public class DealerPerformanceController {
 
-    private final EmployeeRepository employeeRepository;
-    private final CustomerRepository customerRepository;
     private final BookingRepository bookingRepository;
-    private final TestDriveRepository testDriveRepository;
     private final CurrentUserUtil currentUserUtil;
 
-    public DealerPerformanceController(
-            EmployeeRepository employeeRepository,
-            CustomerRepository customerRepository,
-            BookingRepository bookingRepository,
-            TestDriveRepository testDriveRepository,
-            CurrentUserUtil currentUserUtil) {
-
-        this.employeeRepository = employeeRepository;
-        this.customerRepository = customerRepository;
+    public DealerPerformanceController(BookingRepository bookingRepository,
+                                       CurrentUserUtil currentUserUtil) {
         this.bookingRepository = bookingRepository;
-        this.testDriveRepository = testDriveRepository;
         this.currentUserUtil = currentUserUtil;
     }
 
+    // GET /dealer/performance — per-employee performance stats using a single aggregated query (no N+1)
     @GetMapping
-    public List<Map<String, Object>> getPerformance() {
-
+    public List<EmployeePerformanceDTO> getPerformance() {
+        // Resolve logged-in dealer ID from JWT
         Long dealerId = currentUserUtil.getLoggedInDealerId();
 
-        List<Employee> employees = employeeRepository.findByDealerDealerIdAndActiveTrueOrderByEmployeeIdAsc(dealerId);
+        // Single JOIN query returns [employeeId, name, leads, testDrives, bookings] per employee
+        List<Object[]> rows = bookingRepository.getEmployeePerformanceByDealer(dealerId);
 
-        return employees.stream().map(emp -> {
+        return rows.stream().map(row -> {
+            long leads     = ((Number) row[2]).longValue();
+            long testDrives = ((Number) row[3]).longValue();
+            long bookings  = ((Number) row[4]).longValue();
 
-            long leads = customerRepository.countByEmployee_EmployeeId(emp.getEmployeeId());
-            long testDrives = testDriveRepository.countByEmployeeEmployeeId(emp.getEmployeeId());
-            long bookings = bookingRepository.countByEmployeeEmployeeId(emp.getEmployeeId());
+            // Conversion rate: bookings / leads * 100, guarded against division by zero
+            double conversion = leads == 0 ? 0 : Math.round((bookings * 100.0 / leads));
 
-            double conversion = leads == 0 ? 0 : (bookings * 100.0 / leads);
-
-            Map<String, Object> map = new HashMap<>();
-            map.put("employeeName", emp.getName());
-            map.put("totalLeads", leads);
-            map.put("totalTestDrives", testDrives);
-            map.put("totalBookings", bookings);
-            map.put("conversionRate", Math.round(conversion));
-
-            return map;
-        }).toList();
+            return EmployeePerformanceDTO.builder()
+                    .employeeId(((Number) row[0]).longValue())
+                    .employeeName((String) row[1])
+                    .totalLeads(leads)
+                    .totalTestDrives(testDrives)
+                    .totalBookings(bookings)
+                    .conversionRate(conversion)
+                    .build();
+        }).collect(Collectors.toList());
     }
 }
